--- a/CoLearn/Main.storyboard
+++ b/CoLearn/Main.storyboard
@@ -76,6 +76,25 @@
             </objects>
             <point key="canvasLocation" x="-308" y="420"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="hrd-1s-PqP">
+            <objects>
+                <viewController id="f6o-SD-aJ6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Uwe-aN-hUb"/>
+                        <viewControllerLayoutGuide type="bottom" id="sv1-Jw-vlw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pg0-vg-Zu0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="2vD-jk-kIX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fhS-kP-uhv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="24" y="1544"/>
+        </scene>
         <!--Schedules View Controller-->
         <scene sceneID="Zvv-8d-HJE">
             <objects>
@@ -92,55 +111,70 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Spanish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYE-Pr-aIk">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spanish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYE-Pr-aIk">
                                             <rect key="frame" x="8" y="8" width="78" height="24"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.32856570509999999" green="0.0096231066019999995" blue="0.0095630274930000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Instructor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aff-gZ-2BS">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aff-gZ-2BS">
                                             <rect key="frame" x="8" y="36" width="63" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Request Note:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mjd-Nn-iIM">
-                                            <rect key="frame" x="8" y="84" width="87" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="April 2nd, 2016 @7:30am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WU7-qL-3HD">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="April 2nd, 2016 @7:30am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WU7-qL-3HD">
                                             <rect key="frame" x="139" y="11" width="173" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rahul" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8X-RL-r8Y">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rahul" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8X-RL-r8Y">
                                             <rect key="frame" x="79" y="35" width="39" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Learner:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hD-JZ-9uz">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Learner:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hD-JZ-9uz">
                                             <rect key="frame" x="8" y="60" width="50" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Caleb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfc-bl-PAi">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caleb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfc-bl-PAi">
                                             <rect key="frame" x="78" y="59" width="40" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Can you help me to learn?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgC-iK-78E">
-                                            <rect key="frame" x="98" y="83" width="168" height="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Can you help me to learn?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgC-iK-78E">
+                                            <rect key="frame" x="8" y="84" width="168" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="WU7-qL-3HD" secondAttribute="trailing" constant="8" id="3kf-mM-tnZ"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wgC-iK-78E" secondAttribute="trailing" constant="9" id="46W-GL-2uy"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Qfc-bl-PAi" secondAttribute="trailing" constant="10" id="4jr-hE-lS4"/>
+                                        <constraint firstItem="Qfc-bl-PAi" firstAttribute="leading" secondItem="7hD-JZ-9uz" secondAttribute="trailing" constant="20" id="At1-t6-Zyk"/>
+                                        <constraint firstItem="Qfc-bl-PAi" firstAttribute="centerY" secondItem="7hD-JZ-9uz" secondAttribute="centerY" id="HDz-vi-HOY"/>
+                                        <constraint firstAttribute="bottom" secondItem="wgC-iK-78E" secondAttribute="bottom" constant="16" id="HT8-tE-bUD"/>
+                                        <constraint firstItem="7hD-JZ-9uz" firstAttribute="leading" secondItem="lbo-Tl-iwd" secondAttribute="leading" constant="8" id="Oto-Kr-cz5"/>
+                                        <constraint firstItem="wgC-iK-78E" firstAttribute="leading" secondItem="lbo-Tl-iwd" secondAttribute="leading" constant="8" id="PX5-Bn-rYh"/>
+                                        <constraint firstItem="x8X-RL-r8Y" firstAttribute="leading" secondItem="aff-gZ-2BS" secondAttribute="trailing" constant="8" id="PdT-ol-tnX"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="x8X-RL-r8Y" secondAttribute="trailing" constant="10" id="UFp-ZZ-zdo"/>
+                                        <constraint firstItem="wgC-iK-78E" firstAttribute="top" secondItem="Qfc-bl-PAi" secondAttribute="bottom" constant="7" id="Y54-JR-KsZ"/>
+                                        <constraint firstItem="WU7-qL-3HD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RYE-Pr-aIk" secondAttribute="trailing" constant="9" id="YXL-he-ose"/>
+                                        <constraint firstItem="RYE-Pr-aIk" firstAttribute="leading" secondItem="lbo-Tl-iwd" secondAttribute="leading" constant="8" id="cu5-Hy-dco"/>
+                                        <constraint firstItem="RYE-Pr-aIk" firstAttribute="top" secondItem="lbo-Tl-iwd" secondAttribute="top" constant="8" id="goe-SM-qqq"/>
+                                        <constraint firstItem="WU7-qL-3HD" firstAttribute="centerY" secondItem="RYE-Pr-aIk" secondAttribute="centerY" id="leg-Yz-uVv"/>
+                                        <constraint firstItem="aff-gZ-2BS" firstAttribute="leading" secondItem="lbo-Tl-iwd" secondAttribute="leading" constant="8" id="m5t-Yz-0DT"/>
+                                        <constraint firstItem="7hD-JZ-9uz" firstAttribute="top" secondItem="aff-gZ-2BS" secondAttribute="bottom" constant="8" id="nXx-SD-TU2"/>
+                                        <constraint firstItem="aff-gZ-2BS" firstAttribute="top" secondItem="RYE-Pr-aIk" secondAttribute="bottom" constant="4" id="yRN-GE-PkW"/>
+                                        <constraint firstItem="x8X-RL-r8Y" firstAttribute="centerY" secondItem="aff-gZ-2BS" secondAttribute="centerY" id="zO6-kM-w0m"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="instructorLabel" destination="x8X-RL-r8Y" id="qHh-bd-nba"/>
@@ -153,7 +187,11 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" id="Gsv-iL-MjR">
-                        <barButtonItem key="leftBarButtonItem" title="Approvals" id="dg1-5Q-6c3"/>
+                        <barButtonItem key="leftBarButtonItem" title="Approvals" id="dg1-5Q-6c3">
+                            <connections>
+                                <segue destination="f6o-SD-aJ6" kind="push" id="zjr-9J-ZN1"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="VHV-tU-Pfp"/>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
@@ -163,7 +201,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rUc-4V-IAe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1022" y="842"/>
+            <point key="canvasLocation" x="490" y="1544"/>
         </scene>
         <!--User-->
         <scene sceneID="RWq-KR-n9d">
